fix(mobile):修复备注编辑界面按钮点击后未清空循环项可见状态的问题- 在按钮点击事件中增加 setLoopItemVisible(null) 调用- 确保点击后正确清除循环项的可见状态 - 防止重复点击导致的状态异常
style(mobile): 调整图片查看器样式以解决层级显示问题- 设置 adm-image-viewer-content 的 z-index 样式变量
- 定义 --adm-mask-z-index为 1004
- 确保图片查看器在正确的层级上展示

--- a/src/pages/Mobile/mobile.module.css
+++ b/src/pages/Mobile/mobile.module.css
@@ -64,3 +64,12 @@
 .imgListViewer{
   z-index: 2000!important;
 }
+
+[class="adm-image-viewer-content"] {
+  --z-index: var(--adm-mask-z-index);
+  z-index: var(--z-index);
+}
+
+:root {
+  --adm-mask-z-index: 1004;
+}
